WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166652
Placeholder style mechanism leaks CSSFontSelector for first Document styled.
https://bugs.webkit.org/show_bug.cgi?id=166652
Summary
Placeholder style mechanism leaks CSSFontSelector for first Document styled.
Andreas Kling
Reported
2017-01-03 09:38:01 PST
ensurePlaceholderStyle in StyleTreeResolve.cpp will cause us to keep the CSSFontSelector around for the first document we ever style.
Attachments
Patch
(3.52 KB, patch)
2017-01-03 09:39 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2017-01-03 09:39:30 PST
Created
attachment 297935
[details]
Patch
WebKit Commit Bot
Comment 2
2017-01-03 10:54:00 PST
Comment on
attachment 297935
[details]
Patch Clearing flags on attachment: 297935 Committed
r210240
: <
http://trac.webkit.org/changeset/210240
>
WebKit Commit Bot
Comment 3
2017-01-03 10:54:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug